<resources>
    <string name="app_name">Waldbrand</string>
    <string name="nospaceleft">Not enough space left on device.</string>
    <string name="spaceneeded1">This program needs at least</string>
    <string name="spaceneeded2">of free space to operate. Consider moving the program to SD card if possible.</string>
    <string name="loading_data">Extracting data. Please wait…</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="file_size_bytes">bytes</string>
    <string name="file_size_kb">kB</string>
    <string name="file_size_mb">MB</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="consent_title">Privacy Policy</string>
    <string name="consent_accept">Accept</string>
    <string name="consent_decline">Decline</string>
    <string name="labels">Labels</string>
    <string name="open_drawer">Show sidebar</string>
    <string name="close_drawer">Hide sidebar</string>
    <string name="menu_info_about">About this software</string>
    <string name="menu_privacy">Privacy policy</string>
    <string name="menu_position">Position</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_remove">Remove Marker</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_map">Map</string>
    <string name="menu_position_last_known">Last known location</string>
    <string name="menu_position_my_location_enable">Show my location</string>
    <string name="menu_position_my_location_disable">Remove my location</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_help_info">Help &amp; Info</string>
    <string name="menu_help">Help</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_select_none">Select none</string>
    <string name="title_location_permission">Permission Required</string>
    <string name="rationale_location_permission">To display your location, this app needs permission to access your device\'s location. Please grant the permission in the next dialog.</string>
    <string name="rationale_location_permission_denied">To display your location, this app needs permission to access your device\'s location. Because you have denied this permission permanently before, you can only enable it in the system settings of this app. Do you want to open the settings dialog now?</string>
    <string name="error_last_location_unknown">The last location is unknown</string>
    <string name="no_location_provider_available">No location source available. Would you like to open the system settings for location sources?</string>
    <string name="preferences_general">General settings</string>
    <string name="preferences_map">Map settings</string>
    <string name="preferences_system">System settings</string>
    <string name="preferences_privacy">Privacy settings</string>
    <string name="preferences_advanced">Advanced settings</string>
    <string name="preferences_show_scale_bar">Map scale bar</string>
    <string name="preferences_show_scale_bar_desc">Show the scale of the map</string>
    <string name="preferences_fullscreen">Full screen mode</string>
    <string name="preferences_fullscreen_desc">Hide the status bar</string>
    <string name="preferences_wake_lock">Stay awake</string>
    <string name="preferences_wake_lock_desc">Stop the screen from locking</string>
    <string name="preferences_move_speed">Move speed</string>
    <string name="preferences_move_speed_desc">Adjust the move speed of the map</string>
    <string name="preferences_move_speed_value">%d %% move speed</string>
    <string name="preferences_magnification">Font size</string>
    <string name="preferences_magnification_desc">Adjust the size of fonts on the map</string>
    <string name="preferences_magnification_value">%d %% magnification</string>
    <string name="snap_to_location_enabled">Snap to position is activated</string>
    <string name="snap_to_location_disabled">Snap to position is disabled</string>
    <string name="preferences_renderstyle_dialog_title">Select a map theme</string>
    <string name="preferences_renderstyle_title">Map theme</string>
    <string name="preferences_renderstyle_summary">Appearance of the map</string>
    <string name="preferences_show_tips">Show tips</string>
    <string name="preferences_show_tips_desc">Display tips and tricks when starting the app</string>
    <string name="preferences_app_info">App info</string>
    <string name="preferences_app_info_desc">Show system info about the app and manage permissions</string>
    <string name="preferences_locations_sources">Location settings</string>
    <string name="preferences_locations_sources_desc">Show system settings for location sources</string>
    <string name="preferences_show_grid">Show grid</string>
    <string name="preferences_show_grid_desc">Display the boundaries of the map tiles used to create the map</string>
    <string name="preferences_show_zoom_level">Show zoom level</string>
    <string name="preferences_show_zoom_level_desc">Display the current zoom level in the upper left corner</string>
    <string name="preferences_show_coordinates">Show coordinates</string>
    <string name="preferences_show_coordinates_desc">Display the current coordinates of the map center in the upper left corner</string>
    <string name="preferences_show_reticle">Show reticle</string>
    <string name="preferences_show_reticle_desc">Display a reticle to highlight the center of the map</string>
    <string name="preferences_coordinate_system_dialog_title">Select a coordinate system</string>
    <string name="preferences_coordinate_system_title">Coordinate system</string>
    <string name="search_hint">Search database</string>
    <string name="search_match_mode">match mode</string>
    <string name="search_order">order</string>
    <string name="search_filter">filter</string>
    <string name="search_help">help</string>
    <string name="alphabetic">alphabetic</string>
    <string name="alphabetic_inverse">inverse</string>
    <string name="by_distance">by distance</string>
    <string name="anywhere">anywhere</string>
    <string name="exact">exact</string>
    <string name="start_with">starts with</string>
    <string name="end_with">ends with</string>
    <string name="categories_select_all">all categories</string>
    <string name="categories_select_streets">streets</string>
    <string name="categories_select_food">food &amp; drink</string>
    <string name="categories_pick">pick categories</string>
    <string name="search_no_results">No results. Try a less specific query…</string>
    <string name="search_no_results_more">If you do not find what you\'re looking for, try setting the match mode to \"anywhere\" and remove category restrictions by selecting \"all categories\".</string>
    <string name="context_dial">dial</string>
    <string name="context_website">visit website</string>
    <string name="elevation">Elevation</string>
    <string name="cat_orientation">Orientation</string>
    <string name="cat_streets">Streets</string>
    <string name="cat_places">Places</string>
    <string name="cat_transportation">Transportation</string>
    <string name="cat_railstop">Railway stops</string>
    <string name="cat_tramstop">Tram stops</string>
    <string name="cat_busstop">Bus stops</string>
    <string name="cat_nature">Parks &amp; Nature</string>
    <string name="cat_parks">Parks</string>
    <string name="cat_water">Water</string>
    <string name="cat_cemeteries">Cemeteries</string>
    <string name="cat_peaks">Peaks</string>
    <string name="cat_playgrounds">Playgrounds</string>
    <string name="cat_foods_drinks">Foods &amp; Drink</string>
    <string name="cat_restaurant">Restaurants</string>
    <string name="cat_cafe">Cafes</string>
    <string name="cat_bakeries">Bakeries</string>
    <string name="cat_pubs">Pubs</string>
    <string name="cat_bars">Bars</string>
    <string name="cat_fastfood">Fast food</string>
    <string name="cat_biergardens">Beer gardens</string>
    <string name="cat_nightclubs">Nightclubs</string>
    <string name="cat_arts_culture">Arts &amp; Culture</string>
    <string name="cat_theatres">Theatres</string>
    <string name="cat_cinemas">Cinemas</string>
    <string name="cat_museums">Museums</string>
    <string name="cat_religious">Religious</string>
    <string name="cat_attraction">Attractions</string>
    <string name="cat_memorial">Memorials</string>
    <string name="cat_accommodation">Accommodation</string>
    <string name="cat_hotels">Hotels</string>
    <string name="cat_hostels">Hostels</string>
    <string name="cat_guest_houses">Guest houses</string>
    <string name="cat_education">Education</string>
    <string name="cat_kindergarten">Preschool</string>
    <string name="cat_school">Schools</string>
    <string name="cat_universty">Universities</string>
    <string name="cat_library">Libraries</string>
    <string name="cat_health">Healthcare</string>
    <string name="cat_hospitals">Hospitals</string>
    <string name="cat_doctors">Doctors</string>
    <string name="cat_dentists">Dentists</string>
    <string name="cat_veterinary">Veterinary</string>
    <string name="cat_pharmacies">Pharmacies</string>
    <string name="cat_shops">Shops</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_shoes">Shoes</string>
    <string name="cat_jewelry">Jewelry</string>
    <string name="cat_supermarkets">Supermarkets</string>
    <string name="cat_chemists">Chemists</string>
    <string name="cat_convenience">Convenience</string>
    <string name="cat_carshops">Car shops</string>
    <string name="cat_bikeshops">Bike shops</string>
    <string name="cat_flowers">Flowers</string>
    <string name="cat_diy">Hardware</string>
    <string name="cat_electronics">Electronics</string>
    <string name="cat_furniture">Furniture</string>
    <string name="cat_books">Books</string>
    <string name="cat_waldbrand">Waldbrand</string>
    <string name="cat_underground">Hydrants (underground)</string>
    <string name="cat_pillar">Hydrants (pillar)</string>
    <string name="cat_pipe">Hydrants (pipe)</string>
    <string name="cat_water_ponds">Water ponds</string>
    <string name="cat_water_tank">Water tanks</string>
    <string name="cat_suction_point">Suction points</string>
    <string name="cat_emergency_access_point">Emergency access point</string>
    <string name="cat_misc">Misc</string>
    <string name="cat_banks_atms">Banks &amp; ATMs</string>
    <string name="cat_embassies">Embassies</string>
    <string name="cat_parking">Parking</string>
    <string name="cat_post_boxes">Post boxes</string>
    <string name="help_drawer_text1">With this menu you can configure the icons and labels that appear on the map.</string>
    <string name="help_drawer_text2">Use the switch at the top to toggle the visibility of all icons and labels at once.</string>
    <string name="help_drawer_text3">To enable or disable specific elements on the map touch the desired item\'s checkbox in the list.</string>
    <string name="help_drawer_text4">The available categories are organized in groups that can be toggled altogether. You can expand these groups and select contained items independently.</string>
    <string name="map_data">Map data</string>
    <string name="base_data">Base data and hydrants</string>
    <string name="copyright_osm">© OpenStreetMap contributors</string>
    <string name="license_osm">License: Open Data Commons Open Database License (ODbL)</string>
    <string name="emergency_access_points">Emergency access points</string>
    <string name="copyright_lfb">© Landesbetrieb Forst Brandenburg</string>
    <string name="license_dl_de_by_20">License: Data licence Germany – attribution – version 2.0 (dl-de/by-2-0)</string>
    <string name="link_dataset">Reference to the dataset</string>
</resources>