<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_about">

    <TextView
        style="@style/Head"
        android:text="@string/map_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View style="@style/MediumSpacer" />

    <TextView
        style="@style/Subhead"
        android:text="@string/base_data" />

    <TextView
        android:id="@+id/textViewMapCopyrightOSM"
        style="@style/Text"
        android:text="@string/copyright_osm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewMapLicenseOSM"
        style="@style/Text"
        android:text="@string/license_osm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View style="@style/MediumSpacer" />

    <TextView
        style="@style/Subhead"
        android:text="@string/emergency_access_points" />

    <TextView
        android:id="@+id/textViewEmergencyAccessPointsCopyright"
        style="@style/Text"
        android:text="@string/copyright_lfb"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewEmergencyAccessPointsLicense"
        style="@style/Text"
        android:text="@string/license_dl_de_by_20"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewEmergencyAccessPointsLink"
        style="@style/Text"
        android:text="@string/link_dataset"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</merge>